--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,9 @@ before_deploy:
   - chmod 700 ~/.ssh/id_rsa
   - eval "$(ssh-agent -s)"
   #- echo -e "\n" | ssh-add ~/.ssh/id_rsa & echo -e "\n"
-  - echo 'echo -e "\n"' > ~/.echo_ps && chmod 700 ~/.echo_ps
-  - cat ~/.ssh/id_rsa | SSH_ASKPASS=~/.echo_ps ssh-add - >> /dev/null
+#  - echo 'echo -e "\n"' > ~/.echo_ps && chmod 700 ~/.echo_ps
+#  - cat ~/.ssh/id_rsa | SSH_ASKPASS=~/.echo_ps ssh-add -
+  - ssh-add ~/.ssh/id_rsa > /dev/null 2>&1
   - ssh-keyscan -H 'travis-ci.com' >> ~/.ssh/known_hosts
   - echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
   - chmod +x deploy.sh
