--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,9 @@ before_deploy:
   - echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
   - chmod 700 ~/.ssh/id_rsa
   - eval "$(ssh-agent -s)"
-  #- echo -e "\n" | ssh-add ~/.ssh/id_rsa & echo -e "\n"
-  - echo 'echo SSH_PASSPHRASE' > ~/.echo_ps && chmod 700 ~/.echo_ps
-  - cat ~/.ssh/id_rsa | SSH_ASKPASS=~/.echo_ps ssh-add -
+  - echo -e "\n" | ssh-add ~/.ssh/id_rsa & echo -e "\n"
+#  - echo 'echo SSH_PASSPHRASE' > ~/.echo_ps && chmod 700 ~/.echo_ps
+#  - cat ~/.ssh/id_rsa | SSH_ASKPASS=~/.echo_ps ssh-add -
   - ssh-keyscan -H 'travis-ci.com' >> ~/.ssh/known_hosts
   - echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
   - chmod +x deploy.sh
