--- a/.travis.yml
+++ b/.travis.yml
@@ -20,17 +20,13 @@ script:
   - docker-compose -f docker/docker-compose.build.yml build
   - docker-compose -f docker/docker-compose.build.yml push
 
-after_script:
-  - docker images
-  - echo "Push docker images done!"
-
 before_deploy:
   - mkdir -p ~/.ssh
   - SSH_PRIVATE_KEY=$(cat id_rsa)
   - echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
   - chmod 700 ~/.ssh/id_rsa
   - eval "$(ssh-agent -s)"
-  - echo -e "\n" | ssh-add ~/.ssh/id_rsa & echo -e "\n"
+  - ssh-add ~/.ssh/id_rsa
 #  - echo 'echo SSH_PASSPHRASE' > ~/.echo_ps && chmod 700 ~/.echo_ps
 #  - cat ~/.ssh/id_rsa | SSH_ASKPASS=~/.echo_ps ssh-add -
 #  - chmod +x ./expect.exp
@@ -46,4 +42,4 @@ deploy:
 
 
 after_deploy:
-  - docker ps
+  - echo "DONE!"
